# GameLabs

./: .gitattributes  .gitignore  BUILD  WORKSPACE  add-project.bat  add_project.bat  add_project.py  install-at-gamelabs.py  requirments_lock.txt
.github/workflows/: build-game-client.yml  manual.yml
BuildRules/: BUILD  New Text Document.txt  ue5_engine.BUILD  ue5_engine_rules.bzl  ue5_rules.bzl  ue_project_rules.bzl
BuildRules/engine/: ue5_engine.BUILD  ue5_engine_rules.bzl
BuildRules/project/: ue_project_rules.bzl
cookiecutter-templates/TemplateProject/: cookiecutter.json
cookiecutter-templates/ueplugin/: cookiecutter.json
extras/ExistenceSDK/Kamo/Tests/: pyproject.toml  test_basics.py
extras/tools/: BUILD  build_and_deploy_all.bat  build_game.bat  build_game.py  build_game2.bat  build_game2.py  build_server.bat  bump-upload-run-on-aws.bat  bump-version.bat  bumpversion.py  cook-win-server.bat  generate-manifest.bat  generatemanifest.py  install-kamo-cli.bat  install-kamo-cli.sh  launch-current-server-beacon.bat  launch-current-server-ppv.bat  launchcurrentserver.py  map_engine_to_repo.py  map_source_engine.bat  parse_log.py  release-notes.bat  releasenotes.py  replay-git-commits.bat  replay-git-commits.py  run-debuggame-windows-server-locally.bat  run-linux-server-locally.bat  run-windows-server-locally.bat  runlinuxserverlocally.py  upload-build.bat  upload_to_steam.bat  uploadbuild.py  utilities.py  (+1 more)
tools/: BUILD  build-game.py  build_game.py  clean_game_project.py  compile_engine.py  compress.py  manage_custom_engine.py  upload_steam_build.py
(+438 files in other folders)
