[tool.poetry]
name = "RuntimeTests"
version = "0.1.0"
description = ""
authors = ["matti <mattigumm@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^6.2.2"
modo = {git = "git@github.com:arctictheory/kamo-backend.git"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
